hard-gists/4700064/run.log
=== Docker Run Log for 4700064 ===
Started at: Mi 29. Okt 14:57:43 CET 2025

[2025-10-29 14:57:44] START: Running container for 4700064
[2025-10-29 14:57:44] SUCCESS: Container 162a15ff5aaffe16a24bef0d4699b1ca6a258a0ce51bfecf43f43348d3040199 started for 4700064
=== Container logs for 4700064 ===
  File "/snippet.py", line 24
    if verbose: print otterdata['content'], otterdata['url'], otterdata['trackback_total']
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4700064 ===
[2025-10-29 14:57:46] INFO: Container 162a15ff5aaffe16a24bef0d4699b1ca6a258a0ce51bfecf43f43348d3040199 has stopped
